--- a/rwd.html
+++ b/rwd.html
@@ -89,9 +89,9 @@ function hideMenu(){
 				<div class="box">
 					<img src="4.png"/>
 					<div class="item_text">
-						<a href="">Hello 1</a>
-						<div>Hello 1</div>
-						<a href="">Hello 1</a>
+						<a href=""><h3>A guide to the Google Play Console</h3></a>
+						<div>Whether you’re in a business or technical role or on a team of 1 or 100, the Play Console can help you with more than publishing. This tour of Play Console introduces its many features that can help you improve app quality and business performance.</div>
+						<a href="">READ MORE</a>
 					</div>
 				</div>
 			</div>
@@ -119,7 +119,7 @@ function hideMenu(){
 		</div>
 	</main>
 	<footer>
-		<div>
+		<div class="footer_frame">
 			<div class="footer_box">
 				<ul >
 					<label>連結</label>
