--- a/rwd.html
+++ b/rwd.html
@@ -153,7 +153,7 @@ function hideMenu(){
 				<li><a href=""><label>Chrome Web Store Dashboard<label></li></a>
 			</ul>
 			<div class="footer_box" style="background: #37424b;">
-				<img src="logo.png" style="border-bottom: 1px solid #455a64;"/>
+				<img src="logo.png" class="logo"style="border-bottom: 1px solid #455a64;"/>
 				<ul>
 					<li><a href=""><label>Android</label></a></li>
 					<li><a href=""><label>Chrome</a></li>
