--- a/rwd.html
+++ b/rwd.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximu">
-<title>undone_RWD 回應式設計_HsinYu</title>
+<title>undone_RWD 回應式設計_HuangHsinYu</title>
 <link rel="stylesheet" type="text/css" href="rwd_style.css" media="all">
 
 <script>
